<resources>
    <string name="app_name">Project Pina Colada</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_name">This name is invalid</string>
    <string name="error_invalid_location">This location is invalid</string>
    <string name="error_password_match">The passwords do not match</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="go_to_scan">Scan Item</string>
    <string name="camera_message">This is the camera.</string>
    <string name="upc">UPC Code</string>
    <string name="write_review_hint">You can write your review here.</string>
    <string name="write_review_submit">Submit Review</string>
    <string name="product_name">Product Name</string>
    <string name="product_description">Product Description</string>
    <string name="review_title">Title your review here</string>
    <string name="read_reviews">Read Reviews</string>
    <string name="write_review">Write Review</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission. The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured.</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="barcode_message">Would you like to try again, or see a random item?</string>
    <string name="barcode_try_again">Try Again</string>
    <string name="barcode_random">Random</string>
    <string name="olay">Olay!</string>
    <string name="name_tag">Name</string>
    <string name="email_tag">"Email"</string>
    <string name="password_tag">"Password"</string>
    <string name="verify_password_tag">"Verify Password"</string>
    <string name="location_tag">"Location"</string>
    <string name="register_tag">"Register"</string>
    <string name="num_reviews">"Number of Reviews: "</string>
    <string name="zero_reviews">0</string>
    <string name="update_profile">Update</string>
    <string name="logout">Logout</string>
    <string name="review_title_length_min">Title must be at least 4 characters</string>
    <string name="review_title_length_max">Title must be less than 50 characters</string>
    <string name="review_text_length_min">Review must be at least 15 characters</string>
    <string name="review_text_length_max">Review must be less than 1000 characters</string>
    <string name="test_username">test@test.com</string>
    <string name="test_password">test123</string>
    <string name="logout_error">There was an error logging out</string>
    <string name="logout_message">Would you like to try again?</string>
    <string name="logout_try_again">Try Again</string>
    <string name="logout_cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="OK">OK</string>
    <string name="Oops">OOPS!</string>
    <string name="writeError">There was an error in submitting your review. Please check your internet connection and try again.</string>
    <string name="toast_no_reviews_yet">"You have not left any reviews yet! Scan an item to leave a review.</string>

    <string name="product_failure_error">Could not find product</string>
    <string name="product_failure_message">Returning to home screen</string>
    <string name="yes">Yes</string>
    <string name="home">Home Page</string>
    <!-- Strings related to read review -->
    <string name="reviewerlabel">Reviewer:</string>
    <string name="reviewlabel">Review</string>


</resources>

